# proxygen_ih

./: LICENSE  README.md
17/: 17_Align.cpp  17_dedaction.cpp  17_fold.cpp  17_if_constexpr2.cpp  17_init_in _if.cpp  17_make_aligned_unique5.cpp  17_map.cpp  17_map_merge.cpp  17_map_nodehandle.cpp  17_raw_stiring.cpp  17_string_view.cpp  17_struct_binding.cpp  17_thread_loca2l.cpp  17_tuple_varadic.cpp  17_variant.cpp  17_variant3.cpp  CPP17.cpp  CPP17_2.cpp  MonotonicString.cpp  PmrMap.cpp  ShortString4.cpp  asint.cpp  charconv.hpp  pmr1.cpp  pmr2.cpp  tracknew.h
20/: ConstevalIntPow.cpp  ConstexprMath.h  IntegralValue.cpp  IntegralValue2.cpp  IntegralValue3.cpp  ShortString4.cpp  source_location.cpp  spaceship operator.cpp
IntegralString/: CMakeLists.txt  ConstexprMath.h  IntegralValue2.cpp  gen_string.h  main.cpp
Pagaefault_unordered/: CMakeLists.txt  IntegralValue2.h  gen_string.h  main.cpp
cpp_play/: DataTransfer2.cpp  EXPANDING_TUPLES_INTO_CALLABLE.cpp  Factory_CPP14_1.cpp  Info_server.docx  MesageParser.cpp  OrderedThreadPool.cpp  OrderedThreadPool_2.cpp  PodString3.cpp  ShortString2.cpp  WatermarkMessageQueue.cpp  asio_binary_buffers.cpp  atomic_compare_exchange.cpp  atomic_on_shared_ptr.cpp  atomic_thread_fence.cpp  bits.cpp  boost_serial_executor1.cpp  boost_serial_executor2.cpp  call_once.cpp  condition_notify_all.cpp  condition_notify_all2.cpp  if_constexpr.cpp  is_container.cpp  is_map.cpp  is_map2.cpp  make_aligned_unique.cpp  make_aligned_unique2.cpp  make_aligned_unique3.CPP  make_aligned_unique5.CPP  multi_index3.cpp  once_singlenton.cpp  perfect_hash_static_map.cpp  perfect_int_hash.cpp  promise2.cpp  serial_executor_future_then.cpp  smart_ptr.CPP  t.cpp  time_event_generator_test.cpp  unique_ptr1.cpp  unique_ptrFactory.cpp  unique_ptr_variant_queue2.cpp  (+1 more)
data_provider/: CMakeLists.txt
data_provider/serialization/: CMakeLists.txt  main.cpp  proto_gen.sh
data_provider/serialization/proto/: types.proto
data_provider/serialization/proto_gen/: message.pb.h  types.pb.cc
data_provider/server/: CMakeLists.txt  connection.cpp  connection.h  io_context_pool.cpp  io_context_pool.h  server_options.cpp  server_options.h  thrd_per_cntxt_server.cpp  thrd_per_cntxt_server.h
data_provider/test_server/: CMakeLists.txt  test_server.cpp
diff/: 2_dimensh_array.cpp  ALIGN2.CPP  ALIGN3.CPP  CacheOfActiveObjects.cpp  Chrono1.cpp  ClientOptions.h  Effective-Modern-Cpp.tar  Flags.cpp  GetTimeBemchmark.cpp  GregorianCalendar2.cpp  Logger.cpp  Options.cpp  Reference_Collapsing.cpp  SSV-communications.docx  StacktraceException.cpp  SystemState.cpp  Universal_Initialization.cpp  Variadic_store.cpp  alias_declaration.cpp  aligned_storage.cpp  array.cpp  bits.cpp  bits2.cpp  bld_boost_d.sh  boost_endian.cpp  c_array_iter.cpp  cacheLin.cpp  callback_on_template.cpp  cbegin.cpp  chekout.sh  constexpr.cpp  constexpr1.cpp  constexpr5.cpp  cpp.tar  decltype.cpp  deps.el6_d.sh  devtool.txt  enable_if.h  enable_shared_from_this.cpp  endian.h  (+63 more)
diff/clion/root/: CMakeLists.txt  bld_all_d.sh
diff/clion/root/exe_2/: CMakeLists.txt  bld_d.sh
diff/clion/root/main_1/: CMakeLists.txt  main.cpp  main1
diff/clion/root/shared_lib/: CMakeLists.txt  library_shared.cpp  library_shared.h
diff/cmake/root/exe_2/: CMakeLists.txt  main.cpp
diff2/: ALIGN1.CPP  DataTransfer.cpp  DataTransfer2.cpp  Edit1.TXT  Pagefaults.cpp  algo.cpp  asio_post_and_ wait1.cpp  asio_post_and_ wait2.cpp  bits.cpp  bool_lexical_cast.cpp  circular_buffer.cpp  const_overloding.cpp  constexpr4.cpp  emplace.cpp  enable_if2.h  semaphore.cpp
hash_map/: ConstexprMath.h  IntegralValue.h  MonotonicIntegralHashMap.h  main.cpp
multiThread/: Asio_therad_pool.doc  Button.cpp  CPUActor.cpp  FutureOnPool.cpp  Future_impl.cpp  HybridQueue.cpp  Latch.cpp  Latch2.cpp  MReaderMWriterQueue.cpp  OneReaderMWriter.cpp  OneReaderMWriter2.cpp  OneReaderOneWriterQueue.cpp  OneReaderOneWriterQueue2.cpp  OneReaderOneWriterQueue3.cpp  OneShotEventCommunication.cpp  Singlecton.cpp  Stop1.cpp  StopCV.cpp  TheradWithContext.cpp  ThreadPool.cpp  ThreadPool2.cpp  ThreadPool3.cpp  ThreadPoolOrdered.cpp  ThreadPoolOrderedFuture.cpp  ThreadPoolOrderedFutureChain.cpp  ThreadPoolWithContext1.cpp  ThreadPool_lockfree.cpp  ThreadTimer.h  actor.cpp  actor2.cpp  atomic_Release_Acquire.cpp  atomic_doule_checked_singlenton.cpp  atomic_ref.cpp  (+35 more)
protobuf/test2/: CMakeLists.txt  bld_d.sh  message.pb.cc  message.proto  types.pb.h
(+320 files in other folders)
